{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 4031,
  "lineage": "178ef1f1-0788-6441-591b-fe1c67bcead7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/project4-414017/zones/us-east4-b/instanceGroups/l7-xlb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-10T11:10:14.551-07:00",
            "enable_cdn": false,
            "fingerprint": "r9RNezfhdNs=",
            "generated_id": 3006028646984151145,
            "health_checks": [
              "projects/project4-414017/global/healthChecks/l7-xlb-hc"
            ],
            "id": "projects/project4-414017/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "http",
            "project": "project4-414017",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "data.google_kms_key_ring.my_key_ring",
            "google_compute_global_address.private_ip_address",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.example_instance",
            "google_compute_network.vpc",
            "google_compute_subnetwork.webapp_subnet1",
            "google_kms_crypto_key.key",
            "google_kms_crypto_key.vm_key1",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_password.password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-07-10T11:01:38.075-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project4-414017/global/firewalls/example-firewall",
            "log_config": [],
            "name": "example-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/networks/cloudassignmentvpc4",
            "priority": 1000,
            "project": "project4-414017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/firewalls/example-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [
              "cloudass4serviceaccount@project4-414017.iam.gserviceaccount.com",
              "service-account-id@project4-414017.iam.gserviceaccount.com"
            ],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc",
            "google_service_account.service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.227.230.40",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-10T11:06:03.893-07:00",
            "id": "projects/project4-414017/global/addresses/l7-xlb-static-ip",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "project4-414017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.181.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-07-10T11:01:37.836-07:00",
            "id": "projects/project4-414017/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/networks/cloudassignmentvpc4",
            "prefix_length": 16,
            "project": "project4-414017",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/project4-414017/global/forwardingRules/l7-xlb-forwarding-rule-http",
            "ip_address": "35.227.230.40",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule-http",
            "port_range": "443-443",
            "project": "project4-414017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/forwardingRules/l7-xlb-forwarding-rule-http",
            "target": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/targetHttpsProxies/l7-xlb-target-http-proxy"
          },
          "dependencies": [
            "data.google_kms_key_ring.my_key_ring",
            "google_compute_backend_service.default",
            "google_compute_global_address.lb_1",
            "google_compute_global_address.private_ip_address",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.example_instance",
            "google_compute_managed_ssl_certificate.managed_ssl_cert",
            "google_compute_network.vpc",
            "google_compute_subnetwork.webapp_subnet1",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.default",
            "google_kms_crypto_key.key",
            "google_kms_crypto_key.vm_key1",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_password.password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project4-414017/global/networks/cloudassignmentvpc4",
            "mtu": 0,
            "name": "cloudassignmentvpc4",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "50234679317721753",
            "project": "project4-414017",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/networks/cloudassignmentvpc4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "webapp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/project4-414017/global/routes/webapp-route2",
            "name": "webapp-route2",
            "network": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/networks/cloudassignmentvpc4",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "project4-414017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/routes/webapp-route2",
            "tags": [
              "webapp1"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webapp_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-10T11:01:37.960-07:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/project4-414017/regions/us-east4/subnetworks/webapp1",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "webapp1",
            "network": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/networks/cloudassignmentvpc4",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project4-414017",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/regions/us-east4/subnetworks/webapp1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-10T11:10:58.042-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/project4-414017/global/targetHttpsProxies/l7-xlb-target-http-proxy",
            "name": "l7-xlb-target-http-proxy",
            "project": "project4-414017",
            "proxy_bind": false,
            "proxy_id": 3731287527645212765,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/targetHttpsProxies/l7-xlb-target-http-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/project4-414017/global/sslCertificates/managed-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "data.google_kms_key_ring.my_key_ring",
            "google_compute_backend_service.default",
            "google_compute_global_address.private_ip_address",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.example_instance",
            "google_compute_managed_ssl_certificate.managed_ssl_cert",
            "google_compute_network.vpc",
            "google_compute_subnetwork.webapp_subnet1",
            "google_compute_url_map.default",
            "google_kms_crypto_key.key",
            "google_kms_crypto_key.vm_key1",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_password.password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-10T11:10:46.546-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "AbDTQtkqeDo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/project4-414017/global/urlMaps/l7-xlb-url-map",
            "map_id": 5260552045460680777,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "project4-414017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project4-414017/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_kms_key_ring.my_key_ring",
            "google_compute_backend_service.default",
            "google_compute_global_address.private_ip_address",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.example_instance",
            "google_compute_network.vpc",
            "google_compute_subnetwork.webapp_subnet1",
            "google_kms_crypto_key.key",
            "google_kms_crypto_key.vm_key1",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.main",
            "google_sql_user.users",
            "random_password.password"
          ]
        }
      ]
    }
  ]
}